LPD-57827 Refactor to improve logic